--- a/index2.html
+++ b/index2.html
@@ -28,6 +28,8 @@
     .ekran {
       width: 100%;
       height: 20vh;
+      font-size: 55px;
+      font-family: monospace;
       caret-color: white;
       border-top: 25px solid #0d2636;
       border-bottom: 25px solid #0d2636;
@@ -97,9 +99,9 @@
       <tr class="last-tr">
         <td colspan="4">=</td>
       </tr>
-      
     </table>
   </div>
+  <script src="app.js"></script>
   
 </body>
 </html>
